Bug 118448 - CTRL+W does not work anymore. Assigned twice?
Summary: CTRL+W does not work anymore. Assigned twice?
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-16 14:41 UTC by S. Burmeister
Modified: 2005-12-23 15:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2005-12-16 14:41:46 UTC
Version:            (using KDE KDE 3.5.0)
Installed from:    SuSE RPMs
OS:                Linux

When I press CTRL+W I only get a little window at the top-left:
CTRL+W,...
Close
Close

Looking at the shortcut-settings for quanta, I see that there are two entries for CTRL+W. One has the close icon in front of it, one does not.

After I removed the shortcut for the entry without the icon, CTRL+W works again.
Comment 1 András Manţia 2005-12-23 15:36:20 UTC
SVN commit 490885 by amantia:

Don't have two Close actions.

BUG: 118448

 M  +1 -0      ChangeLog  
 M  +0 -5      src/quanta.cpp  
 M  +0 -1      src/quanta.h  
 M  +0 -1      src/quanta_init.cpp  


--- branches/KDE/3.5/kdewebdev/quanta/ChangeLog #490884:490885
@@ -9,6 +9,7 @@
         - insert valid img tag for XHTML documents [#118805]
         - don't show the Pages tab in DTEP editing dialog more than once [#118840]
         - set the DTEP of the document to the one selected in the Quick Start dialog [#118814]
+        - don't have two Close actions [#118448]
 
  - improvements:
         - add XHTML 1.1 and XHTML 1.0 Basic to the quickstart dialog [#118813]
--- branches/KDE/3.5/kdewebdev/quanta/src/quanta.cpp #490884:490885
@@ -638,11 +638,6 @@
 //TODO: Implement it!
 }
 
-void QuantaApp::slotFileClose()
-{
-  ViewManager::ref()->removeActiveView();
-}
-
 void QuantaApp::slotFileClose(const KURL &url)
 {
   QuantaView *view = ViewManager::ref()->isOpened(url);
--- branches/KDE/3.5/kdewebdev/quanta/src/quanta.h #490884:490885
@@ -253,7 +253,6 @@
   void slotFileSaveAll();
   void slotFileReload(QuantaView *view = 0L);
   void slotFileReloadAll();
-  void slotFileClose();
   /** Close the document specified in the parameter if it's opened */
   void slotFileClose(const KURL &url);
   void slotFileCloseAll();
--- branches/KDE/3.5/kdewebdev/quanta/src/quanta_init.cpp #490884:490885
@@ -726,7 +726,6 @@
     //
     KStdAction::openNew( m_quanta, SLOT( slotFileNew()  ), ac);
     KStdAction::open   ( m_quanta, SLOT( slotFileOpen() ), ac, "file_open");
-    KStdAction::close  ( m_quanta, SLOT( slotFileClose()), ac);
     (void) new KAction(i18n("Close Other Tabs"), 0, ViewManager::ref(), SLOT(slotCloseOtherTabs()), ac, "close_other_tabs");
 
     m_quanta->fileRecent =  KStdAction::openRecent(m_quanta, SLOT(slotFileOpenRecent(const KURL&)),