Don't have two Close actions.

BUG: 118448